# GLO-2005-H23

./: README.md
sources/backend/: .gitignore  app.py  auth.py  build_and_run.sh  pyproject.toml  requirements.txt  users.py  usersService.py
sources/backend/exceptions/: InvalidParameterException.py  MissingParameterException.py
sources/backend/repositories/: commentsRepository.py  likesRepository.py  notificationsRepository.py  postsRepository.py  userRepository.py  usersRepository.py
sources/backend/services/: auth.py  authService.py  commentsService.py  likesService.py  notificationsService.py  postsService.py  usersService.py
sources/database/: Dockerfile  comments.sql  database.py  database.sql  docker-compose.yml  follows.sql  likes.sql  notifications.sql  posts.sql  users.sql
sources/database/init_scripts/: 002-auth.sql  005-posts.sql  006-comments.sql  007-likes.sql
sources/frontend/: .env.local.example  .gitignore  package-lock.json  package.json
sources/frontend/app/: globals.css  layout.tsx  loading.tsx  page.module.css  page.tsx
sources/frontend/app/authentification/: page.tsx
sources/frontend/app/profile/: page.tsx
sources/frontend/app/profile/[username]/: page.tsx
sources/frontend/components/: Access.tsx  CitationCard.tsx  CitationCreator.tsx  Comment.tsx  NavBar.tsx  NewComment.tsx  NotificationElement.tsx  TimeParsing.tsx
